--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,226 @@
+@import "queries";
+
+$bp-large: 78.15em; // 1250px
+$bp-medium: 61.25em; // 980px
+$bp-small: 37.5em; // 600px
+$bp-smallest: 31.25em; // 500px
+
 $color-primary: #b88e2f;
 $color-grand-1: #f9f1e7;
 $color-grand-2: #fff3e3;
+$color-gray-1: #333333;
+$color-gray-2: #3a3a3a;
+$color-gray-3: #898989;
 $color-dark: #000000;
+$color-white: #ffff;
+$font-Montserrat: "Montserrat";
+$font-Poppins: "Poppins";
+* {
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  box-sizing: border-box;
+  font-family: $font-Poppins;
+}
+
+header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1.875rem;
+
+  .navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+    width: 90%;
+
+    .hamburger-menu {
+      width: 25rem;
+      height: 100vh;
+      display: flex;
+      position: fixed;
+      top: 0;
+      left: -31.25rem;
+      z-index: 100;
+      background-color: $color-primary;
+      box-shadow: 70px 0 60px rgba(0, 0, 0, 0.105);
+      transition: all 0.3s linear;
+      flex-direction: column;
+      padding: 3.125rem;
+      gap: 10%;
+
+      &.open-menu {
+        left: 0;
+      }
+
+      .links-hamburger-meniu {
+        display: flex;
+        gap: 3.125rem;
+        justify-content: center;
+        flex-direction: column;
+
+        ._link {
+          text-decoration: none;
+          font-size: 34px;
+          font-family: $font-Montserrat;
+          padding-left: 10px;
+          text-align: left;
+          color: $color-white;
+        }
+      }
+    }
+
+    .logo-links {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 16.625rem;
+
+      .hamburger-meniu-logo {
+        display: none;
+      }
+
+      .logo {
+        img {
+          width: 3.125rem;
+          height: 2rem;
+        }
+        .title-company-name {
+          font-family: $font-Montserrat;
+          font-size: 2.125rem;
+          font-weight: 700;
+          padding-left: 0.313rem;
+        }
+      }
+    }
+    .navbar-links {
+      display: flex;
+      align-items: center;
+      gap: 4.688rem;
+
+      .link {
+        text-decoration: none;
+        font-weight: 500;
+        line-height: 1.5rem;
+        color: $color-dark;
+        cursor: pointer;
+        transition: color 0.3 ease, transofrm 03s ease;
+        &:hover {
+          color: $color-primary;
+          transform: scale(1.1);
+        }
+      }
+    }
+  }
+
+  .cart-icon {
+    span {
+      font-size: 1.75rem;
+      cursor: pointer;
+      &:hover {
+        transform: scale(1.1);
+        color: $color-primary;
+      }
+    }
+  }
+
+  .cart-menu {
+    width: 26.063rem;
+    height: auto;
+    display: flex;
+    position: fixed;
+    top: 0;
+    right: -31.25rem;
+    z-index: 800;
+    background-color: $color-grand-2;
+    box-shadow: 70px 0 60px rgba(0, 0, 0, 0.105);
+    transition: all 0.3s linear;
+    flex-direction: column;
+    color: $color-dark;
+    &.open {
+      right: 0;
+    }
+
+    .title-closing-icon {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: row;
+      gap: 1.875rem;
+
+      .title-shopping--cart {
+        font-size: 2rem;
+        font-weight: 600;
+        line-height: 2.25rem;
+        padding-bottom: 1.75rem;
+      }
+      .close-icon {
+        padding-left: 2.625rem;
+        font-size: 1.25rem;
+        padding-bottom: 1.75rem;
+        cursor: pointer;
+      }
+    }
+    .car-list {
+      height: 18.75rem;
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      justify-content: flex-start;
+      margin-top: 2.625rem;
+      overflow: auto;
+    }
+
+    .subtotal-cart {
+      display: flex;
+      align-items: center;
+      flex-direction: row;
+      justify-content: flex-start;
+      gap: 6.25rem;
+      padding: 1.438rem 0;
+
+      .subtotal-span {
+        padding-left: 2.5rem;
+        font-weight: 400;
+        line-height: 2rem;
+        text-align: left;
+      }
+
+      .subtoal-price__cart {
+        font-weight: 600;
+        text-align: left;
+        line-height: 2rem;
+        color: $color-primary;
+      }
+    }
+    .checkout-cart {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: row;
+      padding: 1.625rem 0;
+      gap: 0.875rem;
+
+      .cart-btn {
+        font-size: 0.75rem;
+        font-weight: 400;
+        line-height: 1.125rem;
+        padding: 0.375rem 1.875rem;
+        border-radius: 50px;
+        text-align: center;
+        color: $color-dark;
+        background: transparent;
+        border: 1px solid $color-dark;
+        cursor: pointer;
+        &:hover {
+          border: 1px solid $color-white;
+          background-color: $color-primary;
+        }
+      }
+    }
+  }
+}
