--- a/scss/checkout.scss
+++ b/scss/checkout.scss
@@ -2,6 +2,7 @@
 @import "variables";
 
 .checkout-section {
+  display: none;
   flex-direction: column;
 
   .banner {
@@ -22,7 +23,7 @@
       flex-direction: column;
 
       h2 {
-        font-size: 48px;
+        font-size: 3rem;
         font-weight: 500;
         line-height: 72px;
         color: $color-dark;
@@ -32,18 +33,18 @@
         a {
           text-decoration: none;
           font-family: "Poppins";
-          font-size: 16px;
+          font-size: 1rem;
           font-weight: 500;
           line-height: 24px;
           padding-right: 6px;
           color: $color-dark;
         }
         .arrow {
-          font-size: 14px;
+          font-size: 0.875rem;
           padding-right: 6px;
         }
         .shop--span {
-          font-size: 16px;
+          font-size: 1rem;
           font-weight: 300;
           line-height: 24px;
         }
@@ -57,15 +58,14 @@
     justify-content: center;
     flex-direction: row;
     flex-wrap: wrap;
-    padding-bottom: 12.5rem;
-    padding-top: 3.938rem;
+    padding-top: 63px;
 
     .form-costumer {
       display: flex;
       align-items: flex-start;
       justify-content: center;
       flex-direction: column;
-      padding: 2.188rem 4.688rem;
+      padding: 35px 75px;
       gap: 36px;
 
       h2 {
@@ -100,12 +100,12 @@
               color: $color-dark;
             }
             input {
-              width: 13.088rem;
-              height: 4.588rem;
+              width: 210px;
+              height: 73px;
               border-radius: 10px;
               border: 1px solid $color-gray-4;
-              font-size: 20px;
-              line-height: 1.5rem;
+              font-size: 1.25rem;
+              line-height: 24px;
               font-weight: 500;
               text-align: left;
               color: $color-dark;
@@ -125,12 +125,12 @@
             color: $color-dark;
           }
           input {
-            width: 28.313rem;
-            height: 4.588rem;
+            width: 462px;
+            height: 73px;
             border-radius: 10px;
             border: 1px solid $color-gray-4;
-            font-size: 20px;
-            line-height: 1.5rem;
+            font-size: 1.25rem;
+            line-height: 24px;
             font-weight: 500;
             text-align: left;
             color: $color-dark;
@@ -145,18 +145,18 @@
 
           label {
             font-weight: 500;
-            line-height: 1.5rem;
+            line-height: 24px;
             text-align: left;
             color: $color-dark;
           }
 
           input {
-            width: 28.313rem;
-            height: 4.588rem;
+            width: 462px;
+            height: 73px;
             border-radius: 10px;
             border: 1px solid $color-gray-4;
-            font-size: 20px;
-            line-height: 1.5rem;
+            font-size: 1.25rem;
+            line-height: 24px;
             font-weight: 500;
             text-align: left;
             color: $color-dark;
@@ -170,8 +170,8 @@
       align-items: center;
       flex-direction: column;
       justify-content: center;
-      width: 38rem;
-      padding: 5.438rem 2.313rem;
+      width: 608px;
+      padding: 87px 37px;
 
       .products-total {
         display: flex;
@@ -227,7 +227,7 @@
               gap: 11px;
               h4 {
                 font-family: "Poppins";
-                font-size: 16px;
+                font-size: 1rem;
                 font-weight: 400;
                 line-height: 24px;
                 text-align: left;
@@ -235,7 +235,7 @@
               }
               span {
                 font-family: "Poppins";
-                font-size: 12px;
+                font-size: 0.75rem;
                 font-weight: 500;
                 line-height: 18px;
                 text-align: left;
@@ -243,7 +243,7 @@
               }
               p {
                 font-family: "Poppins";
-                font-size: 12px;
+                font-size: 0.75rem;
                 font-weight: 500;
                 line-height: 18px;
                 text-align: left;
@@ -252,7 +252,7 @@
             }
             span {
               font-family: "Poppins";
-              font-size: 16px;
+              font-size: 1rem;
               font-weight: 500;
               line-height: 24px;
               text-align: left;
@@ -270,7 +270,7 @@
 
           span {
             font-weight: 400;
-            line-height: 1.5rem;
+            line-height: 24px;
             text-align: left;
             color: $color-dark;
           }
@@ -286,9 +286,9 @@
           border-bottom: 1px solid $color-gray-5;
 
           h5 {
-            font-size: 16px;
+            font-size: 1rem;
             font-weight: 400;
-            line-height: 1.5rem;
+            line-height: 24px;
             text-align: left;
             color: $color-dark;
           }
@@ -296,7 +296,7 @@
           span {
             font-weight: 700;
             font-size: 1.5rem;
-            line-height: 2rem;
+            line-height: 32px;
             text-align: left;
             color: $color-primary;
           }
@@ -342,7 +342,7 @@
               }
               span {
                 font-weight: 400;
-                line-height: 1.5rem;
+                line-height: 24px;
                 text-align: left;
                 color: $color-dark;
               }
@@ -359,7 +359,7 @@
           p {
             width: 529px;
             font-weight: 300;
-            line-height: 1.5rem;
+            line-height: 24px;
             text-align: justify;
             color: $color-dark;
             padding-bottom: 40px;
@@ -367,8 +367,8 @@
 
           .btn-place__order {
             cursor: pointer;
-            width: 19.875rem;
-            height: 4rem;
+            width: 318px;
+            height: 64px;
             border-radius: 15px;
             background-color: transparent;
             border: 1px solid $color-dark;
@@ -376,7 +376,7 @@
             font-size: 1.25rem;
             text-align: center;
             font-weight: 400;
-            line-height: 1.875rem;
+            line-height: 30px;
             transition: all 0.3s ease-in;
             &:hover {
               background-color: $color-primary;
