--- a/scss/header.scss
+++ b/scss/header.scss
@@ -5,7 +5,7 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 1.875rem;
+  padding: 30px;
 
   .navbar {
     display: flex;
@@ -15,27 +15,32 @@ header {
     width: 90%;
 
     .hamburger-menu {
-      width: 25rem;
+      width: 400px;
       height: 100vh;
       display: flex;
       position: fixed;
       top: 0;
-      left: -31.25rem;
+      left: -500px;
       z-index: 100;
-      background-color: $color-primary;
+      background-color: $color-white;
       box-shadow: 70px 0 60px rgba(0, 0, 0, 0.105);
       transition: all 0.3s linear;
       flex-direction: column;
-      padding: 3.125rem;
+      padding: 50px;
       gap: 10%;
 
       &.open-menu {
         left: 0;
       }
 
+      span {
+        font-weight: 700;
+        font-size: 1.875rem;
+      }
+
       .links-hamburger-meniu {
         display: flex;
-        gap: 3.125rem;
+        gap: 50px;
         justify-content: center;
         flex-direction: column;
 
@@ -45,7 +50,8 @@ header {
           font-family: $font-Montserrat;
           padding-left: 10px;
           text-align: left;
-          color: $color-white;
+          color: $color-dark;
+          font-weight: 700;
         }
       }
     }
@@ -54,34 +60,40 @@ header {
       display: flex;
       align-items: center;
       justify-content: space-between;
-      gap: 16.625rem;
-
-      .hamburger-meniu-logo {
-        display: none;
-      }
+      gap: 266px;
 
       .logo {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        .hamburger-meniu-icon {
+          display: none;
+
+          span {
+            transition: all 0.3s linear;
+          }
+        }
         img {
-          width: 3.125rem;
-          height: 2rem;
+          width: 50px;
+          height: 32px;
         }
         .title-company-name {
           font-family: $font-Montserrat;
-          font-size: 2.125rem;
+          font-size: 1.25rem;
           font-weight: 700;
-          padding-left: 0.313rem;
+          padding-left: 5px;
         }
       }
     }
     .navbar-links {
       display: flex;
       align-items: center;
-      gap: 4.688rem;
+      gap: 75px;
 
       .link {
         text-decoration: none;
         font-weight: 500;
-        line-height: 1.5rem;
+        line-height: 24px;
         color: $color-dark;
         cursor: pointer;
         transition: color 0.3 ease, transofrm 03s ease;
@@ -105,14 +117,15 @@ header {
   }
 
   .cart-menu {
-    width: 26.063rem;
+    display: none;
+    width: 417px;
     height: auto;
     display: flex;
     position: fixed;
     top: 0;
-    right: -31.25rem;
-    z-index: 800;
-    background-color: $color-grand-2;
+    right: -500px;
+    z-index: 900;
+    background-color: $color-white;
     box-shadow: 70px 0 60px rgba(0, 0, 0, 0.105);
     transition: all 0.3s linear;
     flex-direction: column;
@@ -121,56 +134,58 @@ header {
       right: 0;
     }
 
-    .title-closing-icon {
+    .cart-header {
       display: flex;
       align-items: center;
       justify-content: center;
       flex-direction: row;
-      gap: 1.875rem;
+      padding-top: 30px;
+      gap: 110px;
 
-      .title-shopping--cart {
-        font-size: 2rem;
+      .title-shopping__cart {
+        font-size: 1.5rem;
         font-weight: 600;
-        line-height: 2.25rem;
-        padding-bottom: 1.75rem;
+        line-height: 36px;
       }
       .close-icon {
-        padding-left: 2.625rem;
-        font-size: 1.25rem;
-        padding-bottom: 1.75rem;
+        padding-left: 42px;
+        padding-bottom: 28px;
         cursor: pointer;
       }
     }
-    .car-list {
-      height: 18.75rem;
+    .cart-list {
       display: flex;
       align-items: center;
       flex-direction: column;
       justify-content: flex-start;
-      margin-top: 2.625rem;
+      margin-top: 42px;
+      height: 300px;
       overflow: auto;
     }
 
     .subtotal-cart {
-      display: flex;
-      align-items: center;
-      flex-direction: row;
-      justify-content: flex-start;
-      gap: 6.25rem;
-      padding: 1.438rem 0;
+      .space-for__mobile {
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+        justify-content: flex-start;
+        gap: 100px;
+        padding: 23px 0;
+        border-bottom: 1px solid $color-gray-5;
 
-      .subtotal-span {
-        padding-left: 2.5rem;
-        font-weight: 400;
-        line-height: 2rem;
-        text-align: left;
-      }
+        .subtotal-span {
+          padding-left: 40px;
+          font-weight: 400;
+          line-height: 32px;
+          text-align: left;
+        }
 
-      .subtoal-price__cart {
-        font-weight: 600;
-        text-align: left;
-        line-height: 2rem;
-        color: $color-primary;
+        .subtoal-price__cart {
+          font-weight: 600;
+          text-align: left;
+          line-height: 32px;
+          color: $color-primary;
+        }
       }
     }
     .checkout-cart {
@@ -178,14 +193,14 @@ header {
       align-items: center;
       justify-content: center;
       flex-direction: row;
-      padding: 1.625rem 0;
-      gap: 0.875rem;
+      padding: 26px 0;
+      gap: 14px;
 
       .cart-btn {
         font-size: 0.75rem;
         font-weight: 400;
-        line-height: 1.125rem;
-        padding: 0.375rem 1.875rem;
+        line-height: 18px;
+        padding: 6px 30px;
         border-radius: 50px;
         text-align: center;
         color: $color-dark;
