--- a/scss/shop.scss
+++ b/scss/shop.scss
@@ -2,8 +2,9 @@
 @import "variables";
 
 .shop-page {
-  // display: none;
+  display: none;
   flex-direction: column;
+  margin-bottom: 81px;
 
   .banner {
     background-image: url("/imgs/banner.png");
@@ -12,7 +13,7 @@
     background-size: cover;
     width: 100%;
     height: 316px;
-
+    margin-bottom: 46px;
     .shop-bread-crumb {
       display: flex;
       align-items: center;
@@ -23,7 +24,7 @@
       flex-direction: column;
 
       h2 {
-        font-size: 48px;
+        font-size: 3rem;
         font-weight: 500;
         line-height: 72px;
         color: $color-dark;
@@ -33,7 +34,7 @@
         a {
           text-decoration: none;
           font-family: "Poppins";
-          font-size: 16px;
+          font-size: 1rem;
           font-weight: 500;
           line-height: 24px;
           padding-right: 6px;
@@ -44,7 +45,7 @@
           padding-right: 6px;
         }
         .shop--span {
-          font-size: 16px;
+          font-size: 1rem;
           font-weight: 300;
           line-height: 24px;
         }
@@ -52,12 +53,14 @@
     }
   }
   .display-products {
-    width: 1236px;
-    margin: 46px auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     .container-cards {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
-      grid-template-rows: repeat(2, 1fr);
+
       grid-column-gap: 32px;
       grid-row-gap: 32px;
 
@@ -95,7 +98,7 @@
             }
 
             .description-card {
-              font-size: 12px;
+              font-size: 0.75rem;
               font-weight: 500;
               line-height: 24px;
               text-align: left;
@@ -128,7 +131,7 @@
 
             button {
               font-family: "Poppins";
-              font-size: 16px;
+              font-size: 1rem;
               font-weight: 600;
               line-height: 24px;
               text-align: left;
@@ -158,7 +161,7 @@
                 color: #ffffff;
                 font-family: "Poppins";
                 font-weight: 600;
-                font-size: 16px;
+                font-size: 1rem;
                 line-height: 24px;
                 transition: all 0.3s ease-in;
                 &:hover {
