--- a/scss/singleProduct.scss
+++ b/scss/singleProduct.scss
@@ -1,10 +1,9 @@
 @import "base";
 @import "variables";
 
-#single-product-page {
+.single-product__page {
+  display: none;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
 
   .product-shop__bread-c {
     display: flex;
@@ -22,10 +21,10 @@
 
       a {
         font-weight: 400;
-        line-height: 1.5rem;
+        line-height: 24px;
         color: $color-gray-4;
         text-decoration: none;
-        padding-right: 0.875rem;
+        padding-right: 14px;
       }
       .arrow {
         font-size: 1.25rem;
@@ -33,10 +32,10 @@
       }
       .product__name {
         font-weight: 400;
-        line-height: 1.5rem;
+        line-height: 24px;
         color: $color-dark;
         border-left: 2px solid $color-gray-4;
-        padding-left: 2.125rem;
+        padding-left: 34px;
       }
     }
   }
@@ -61,19 +60,18 @@
       margin-left: 105px;
 
       .details-product_container {
-        border-bottom: 1px solid $color-gray-4;
         width: 606.01px;
 
         .heder-product__informations {
           .title-product {
             font-weight: 400;
             font-size: 2.625rem;
-            line-height: 3.938rem;
+            line-height: 63px;
             color: $color-dark;
           }
           .price-product {
             font-size: 1.5rem;
-            line-height: 2.25rem;
+            line-height: 36px;
             padding-bottom: 15px;
             color: $color-gray-4;
             font-weight: 500;
@@ -94,7 +92,7 @@
               }
             }
             .number-reviews {
-              font-size: 13px;
+              font-size: 0.813rem;
               font-weight: 400;
               line-height: 19.5px;
               text-align: left;
@@ -109,7 +107,7 @@
             .customer-review {
               padding-left: 5px;
               font-family: "Poppins";
-              font-size: 13px;
+              font-size: 0.813rem;
               font-weight: 400;
               line-height: 19.5px;
               text-align: left;
@@ -119,7 +117,7 @@
         }
         .description {
           width: 424px;
-          font-size: 15px;
+          font-size: 0.938rem;
           font-weight: 400;
           line-height: 19.5px;
           text-align: left;
@@ -140,17 +138,17 @@
             justify-content: center;
             width: 123px;
             height: 64px;
-            gap: 35;
+            gap: 35px;
             border: 10px;
             border: 1px solid $color-gray-4;
             .quantity-btn {
               font-weight: 400;
-              line-height: 1.5rem;
+              line-height: 24px;
               text-align: center;
               border: none;
               cursor: pointer;
               background: transparent;
-              font-size: 20;
+              font-size: 1.25rem;
             }
           }
           .style_btn {
