--- a/scss/homePage.scss
+++ b/scss/homePage.scss
@@ -4,9 +4,9 @@
 .home-page {
   // for now
   margin-bottom: 81px;
-  // display: flex;
-  // justify-content: center;
-  // flex-direction: column;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 
   .hero-banner {
     margin-bottom: 60px;
@@ -93,6 +93,7 @@
     .container-cards {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
+      grid-template-rows: repeat((2, 1fr));
       grid-column-gap: 32px;
       grid-row-gap: 32px;
 
