--- a/scss/queries.scss
+++ b/scss/queries.scss
@@ -223,6 +223,9 @@
             gap: 0;
             width: 90%;
           }
+          .cart-list__check {
+            width: 90%;
+          }
           .subtotal-checkout {
             width: 90%;
           }
